--- a/spring-cloud-admin-ui-iview/package.json
+++ b/spring-cloud-admin-ui-iview/package.json
@@ -12,6 +12,8 @@
     "echarts": "^4.2.0-rc.2",
     "iview": "^3.2.1",
     "js-cookie": "^2.2.0",
+    "moment": "^2.23.0",
+    "moment-shortformat": "^2.1.0",
     "vue": "^2.5.21",
     "vue-i18n": "^8.6.0",
     "vue-router": "^3.0.1",
