--- a/spring-cloud-admin-common/pom.xml
+++ b/spring-cloud-admin-common/pom.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
@@ -9,19 +8,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-cloud-admin-extension</artifactId>
+    <artifactId>spring-cloud-admin-common</artifactId>
 
-    <name>spring-cloud-admin-extension</name>
+    <name>spring-cloud-admin-common</name>
+
     <dependencies>
         <dependency>
-            <groupId>cn.springcloud.admin</groupId>
-            <artifactId>spring-cloud-admin-core</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>cn.springcloud.admin</groupId>
-            <artifactId>spring-cloud-admin-common</artifactId>
-        </dependency>
-
     </dependencies>
 </project>
