修改LOGO字体大小和CSS样式

--- a/spring-cloud-admin-ui-iview/src/config/index.yml
+++ b/spring-cloud-admin-ui-iview/src/config/index.yml
@@ -3,8 +3,8 @@ production:
 
 development:
   basePath: "/api"
-  title: 服务治理平台
+  title: Spring Cloud Admin
   homeName: home
   useI18n: true
   application:
-    name: 服务治理平台
+    name: Spring Cloud Admin
